# CPP_Rust_FFI

./: .gitignore
cpp_program/: CMakeLists.txt
cpp_program/header/: main.h
cpp_program/source/: main.cpp
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
